feat: Integrated Firebase auth with OASBearerJWT
